--- a/unit1/code.ipynb
+++ b/unit1/code.ipynb
@@ -201,10 +201,75 @@
     "# Method 2\n",
     "\n",
     "# reading the data from csv\n",
-    "import pandas as pd\n",
+    "import pandas as pd # type: ignore\n",
     "\n",
     "df = pd.read_csv(\"/workspaces/Machine_learning_2/unit1/fruits.csv\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'glossary': {'title': 'example glossary',\n",
+       "  'GlossDiv': {'title': 'S',\n",
+       "   'GlossList': {'GlossEntry': {'ID': 'SGML',\n",
+       "     'SortAs': 'SGML',\n",
+       "     'GlossTerm': 'Standard Genreralized Markup language',\n",
+       "     'Acronym': 'SGML',\n",
+       "     'Abbrev': 'ISO 8879:1986',\n",
+       "     'GlossDef': {'para': 'A meta-markup language, used to create markup languages such as Doc Book,',\n",
+       "      'GlossSeeAlso': ['GML', 'XML']},\n",
+       "     'GlossSee': 'markup'}}}}}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Method 1\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "json_file_data = open(\"/workspaces/Machine_learning_2/unit1/data.json\").read()\n",
+    "json_data = json.loads(json_file_data)\n",
+    "\n",
+    "json_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                   glossary\n",
+      "title                                      example glossary\n",
+      "GlossDiv  {'title': 'S', 'GlossList': {'GlossEntry': {'I...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method 2\n",
+    "import pandas as pd # type: ignore\n",
+    "df = pd.read_json(\"/workspaces/Machine_learning_2/unit1/data.json\",orient=\"records\")\n",
+    "print(df)"
    ]
   },
   {
